Fix the header-fix issues on tablet and desktop medias

--- a/_src/assets/scss/layout/_about-us.scss
+++ b/_src/assets/scss/layout/_about-us.scss
@@ -5,7 +5,16 @@
 #anchoring-about-us {
     position: relative;
     top: -130px;
+
+    @media all and (min-width:768px){
+        top: -100px;
+    }
+
+    @media all and (min-width:1200px){
+        top: -100px;
+    }
 }
+
 
 /* Cards*/
 .card {
