--- a/_src/assets/scss/layout/_team.scss
+++ b/_src/assets/scss/layout/_team.scss
@@ -15,6 +15,14 @@
 #anchoring-team {
     position: relative;
     top: -130px;
+
+    @media all and (min-width:768px){
+        top: -100px;
+    }
+
+    @media all and (min-width:1200px){
+        top: -100px;
+    }
 }
 
 .container--bgcolor {
